// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 bkhGOd"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK"
    />
  </div>
</div>
`;

exports[`FormField w/ any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm className"
  id="alarm"
  title="title"
>
  <label
    class="Labelstyles__Box-cm44v5-0 bkhGOd"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK"
    />
  </div>
</div>
`;

exports[`FormField w/ inline 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 doHoMK"
>
  <label
    class="Labelstyles__Box-cm44v5-0 bkhGOd"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ label any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 bkhGOd className"
    id="alarm"
    title="title"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK"
    />
  </div>
</div>
`;

exports[`FormField w/ label required 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 igqgKL"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 bkhGOd"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: center 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 igqgKL"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 fKStvC"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: left 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 igqgKL"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 iJhSJB"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message align: right 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 igqgKL"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 jCmLhU"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message any props 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 bkhGOd"
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK className"
      id="alarm"
      title="title"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message coloring: critical 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 igqgKL"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 hgYQeV"
      color="critical"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ message coloring: warning 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 igqgKL"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 iIDbZH"
      color="warning"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`FormField w/ messages 1`] = `
<div
  class="FormFieldstyles__Box-sc-5n1q69-0 jrdhkm"
>
  <label
    class="Labelstyles__Box-cm44v5-0 igqgKL"
    required=""
  >
    Label
  </label>
  <div
    class="Contentstyles__Box-sc-174w0kr-0 ecYPKc"
  >
    Input
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK"
    >
      Message
    </div>
    <div
      class="Messagestyles__Box-sc-9zle4f-0 lfSNXK"
    >
      Message #2
    </div>
  </div>
</div>
`;
